# grid-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
grid_hooks/: __init__.py  comment_dependencies.py  grid_version_badge.py
tests/: test__comment_dependencies.py  test__grid_version_badge.py
tests/fixtures/: dummy_config.yaml
